Locale en-GB and reduced combo options

--- a/config/locales/en-GB_fat_free_crm.yml
+++ b/config/locales/en-GB_fat_free_crm.yml
@@ -68,7 +68,7 @@ en-GB:
   follow_up: Follow-up
   lunch: Lunch
   meeting: Meeting
-  money: Money
+  money: Invoice
   presentation: Presentation
   trip: Trip
 
