Associate & Supplier settings

--- a/config/locales/en-GB_fat_free_crm.yml
+++ b/config/locales/en-GB_fat_free_crm.yml
@@ -27,12 +27,12 @@ en-GB:
   admin_tab_settings: Settings
   admin_tab_plugins: Plugins
 
-  affiliate: Affiliate
+  affiliate: Associate
   competitor: Competitor
   customer: Customer
   partner: Partner
   reseller: Reseller
-  vendor: Vendor
+  vendor: Supplier
 
   planned: Planned
   started: Started
