Added do_not_email and primary_contact_id

--- a/config/locales/en-GB_fat_free_crm.yml
+++ b/config/locales/en-GB_fat_free_crm.yml
@@ -379,6 +379,7 @@ en-GB:
   web_presence: Web Presence
   web_presence_small: web presence
   works_at: "%{job_title} at %{company}"
+  do_not_email: Do not email
 
   # Views -> Leads.
   #----------------------------------------------------------------------------
